# python-project-83

./: .coverage  .coveragerc  .gitignore  .report.json  Dockerfile  Makefile  README.md  build.sh  coverage.xml  database.sql  gunicorn_server.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py  sonar-project.properties  test_db.py  tox.ini  wsgi.py
.github/workflows/: python-app.yml
.hexlet/: setup.sh
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
page_analyzer/: app.py  db.py  page_parser.py  url_utils.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/urls/: index.html  show.html
tests/: conftest.py  test_app.py  test_coverage.py  test_db.py  test_minimal.py
