[build-system]
requires = ["uv"]
build-backend = "uv"

[project]
name = "hexlet-code"
version = "1.0.0"
description = "Web application for analyzing websites SEO parameters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.1.1",
    "psycopg2-binary==2.9.9",
    "beautifulsoup4==4.13.4",
    "requests==2.32.4",
    "python-dotenv==1.0.1",
    "validators==0.22.0",
    "gunicorn==23.0.0"
]

[project.scripts]
start = "gunicorn -w 4 -b 0.0.0.0:8000 'page_analyzer.app:create_app()'"

[tool.ruff]
line-length = 80
select = ["E", "F", "W", "I"]
ignore = []